refactor: adapt code formatter for explorer api